added transaction class

--- a/finance_manager.ipynb
+++ b/finance_manager.ipynb
@@ -70,12 +70,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1d93d8b7-7a8a-4502-bc1d-fb4ee62f7707",
+   "metadata": {},
+   "source": [
+    "## Class : Transaction\n",
+    "This class handles individual transactions (income, expenses)\n",
+    "\n",
+    "        Initialize a new transaction.\n",
+    "        \n",
+    "        :param date: The date of the transaction (e.g., '2024-09-01')\n",
+    "        :param description: A description of the transaction (e.g., 'Groceries')\n",
+    "        :param amount: The amount of the transaction (negative for expense, positive for income)\n",
+    "        :param category: Optional category for the transaction (e.g., 'Food', 'Salary')\n",
+    "        "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cb3effdf-dae5-44f5-b90f-c70d0de044fa",
+   "execution_count": 4,
+   "id": "7d996389-a80e-48b8-b2ad-832b2887449e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Transaction:\n",
+    "    def __init__(self,date, description, amount, category=None):\n",
+    "        self.date = date\n",
+    "        self.description = description\n",
+    "        self.amount = amount\n",
+    "        self.category = category\n",
+    "          \n",
+    "        \n",
+    "\n",
+    "    def __str__(self):\n",
+    "        category = self.category if self.category else \"Uncategorised\"\n",
+    "        return f\"{self.date}: {self.description} - {self.amount} ({category})\"\n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2b3bf86-437a-4c62-81d9-c0b381b25447",
+   "metadata": {},
+   "source": [
+    "## Class: Finance Tracker\n",
+    "Key Features for the FinanceTracker Class:\n",
+    "- Attributes:\n",
+    "    - A list or dictionary to store all accounts (or users, depending on your project scope).\n",
+    "    - The ability to add new accounts and transactions.\n",
+    "- Methods:\n",
+    "    - Add a new account.\n",
+    "    - Add a transaction to an account.\n",
+    "    - View balance for a specific account.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6726bbd-a13d-4647-a9b6-a7ed3e67c910",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FinanceTracker:\n",
+    "    def __init__(self):\n",
+    "        self.accounts = {}\n",
+    "\n",
+    "    def add_account(self, account):\n",
+    "        if account.name in self.accounts:\n",
+    "            print(f\"Account '{account.name}' already exists\")\n",
+    "        else:\n",
+    "            self.accounts[account.name] = account\n",
+    "            print(f\"Account '{account.name}' added.\")\n",
+    "\n",
+    "    def add_transaction(self,account_name,transaction):\n",
+    "        if account_name in self.accounts:\n",
+    "            self.accounts[account_name].add_transaction(transaction)\n",
+    "            print(f\"Transaction added to '{account_name}' account.\")\n",
+    "        else:\n",
+    "            print(f\"Account '{account_name}' does not exist. Please create account before adding transaction.\")\n",
+    "\n",
+    "    def get_balance(self, account_name):\n",
+    "        if account_name in self.accounts:\n",
+    "            return self.accounts[account_name].balance\n",
+    "        else:\n",
+    "            print(f\"Account '{account_name}' does not exist.\")\n",
+    "            return None\n",
+    "            "
+   ]
   }
  ],
  "metadata": {
