added finance tracker class

--- a/finance_manager.ipynb
+++ b/finance_manager.ipynb
@@ -156,6 +156,18 @@
     "        else:\n",
     "            print(f\"Account '{account_name}' does not exist.\")\n",
     "            return None\n",
+    "\n",
+    "    def generate_report(self):\n",
+    "        print(\"Finance Summary of All accounts\")\n",
+    "        print(\"-\" * 30)\n",
+    "        total_balance = 0\n",
+    "        for account in self.accounts.values():\n",
+    "            balance = account.balance\n",
+    "            total_balance += balance\n",
+    "            print(f\"Account: {account.name} | Balance: {balance}\")\n",
+    "        print(f\"Total Balance across all accounts: {total_balance}\")\n",
+    "        print(\"-\" * 30)\n",
+    "        \n",
     "            "
    ]
   }
