added saving and loading functionality

--- a/finance_manager.ipynb
+++ b/finance_manager.ipynb
@@ -34,13 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "id": "8a6823e5-a582-4819-b687-aa3839114678",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import json"
    ]
   },
   {
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "id": "42181214-8cb1-4b8e-b7f0-c4b008075e1d",
    "metadata": {},
    "outputs": [],
@@ -62,11 +63,17 @@
     "class Account:\n",
     "    def __init__(self, name, initial_balance = 0):\n",
     "        self.name = name\n",
-    "        self.initial_balance = initial_balance\n",
+    "        self.balance = initial_balance\n",
     "        self.transactions = []\n",
+    "        \n",
     "    def add_transaction(self, transaction):\n",
     "        self.transactions.append(transaction)\n",
-    "        self.balance += transaction.amount"
+    "        self.balance += transaction.amount\n",
+    "\n",
+    "    def get_balance(self):\n",
+    "        return self.balance\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -77,18 +84,17 @@
     "## Class : Transaction\n",
     "This class handles individual transactions (income, expenses)\n",
     "\n",
-    "        Initialize a new transaction.\n",
+    "- Initialize a new transaction.\n",
     "        \n",
-    "        :param date: The date of the transaction (e.g., '2024-09-01')\n",
-    "        :param description: A description of the transaction (e.g., 'Groceries')\n",
-    "        :param amount: The amount of the transaction (negative for expense, positive for income)\n",
-    "        :param category: Optional category for the transaction (e.g., 'Food', 'Salary')\n",
-    "        "
+    "    - param date: The date of the transaction (e.g., '2024-09-01')\n",
+    "    - param description: A description of the transaction (e.g., 'Groceries')\n",
+    "    - param amount: The amount of the transaction (negative for expense, positive for income)\n",
+    "    - param category: Optional category for the transaction (e.g., 'Food', 'Salary')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "id": "7d996389-a80e-48b8-b2ad-832b2887449e",
    "metadata": {},
    "outputs": [],
@@ -100,8 +106,6 @@
     "        self.amount = amount\n",
     "        self.category = category\n",
     "          \n",
-    "        \n",
-    "\n",
     "    def __str__(self):\n",
     "        category = self.category if self.category else \"Uncategorised\"\n",
     "        return f\"{self.date}: {self.description} - {self.amount} ({category})\"\n",
@@ -127,32 +131,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "d6726bbd-a13d-4647-a9b6-a7ed3e67c910",
    "metadata": {},
    "outputs": [],
    "source": [
     "class FinanceTracker:\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, data_file='finance_data.json'):\n",
     "        self.accounts = {}\n",
+    "        self.data_file = data_file\n",
+    "        self.load_data() #Load data in the start of the program\n",
     "\n",
-    "    def add_account(self, account):\n",
-    "        if account.name in self.accounts:\n",
+    "    def add_account(self, account_name, initial_balance=0):\n",
+    "        if account_name in self.accounts:\n",
     "            print(f\"Account '{account.name}' already exists\")\n",
     "        else:\n",
-    "            self.accounts[account.name] = account\n",
-    "            print(f\"Account '{account.name}' added.\")\n",
-    "\n",
-    "    def add_transaction(self,account_name,transaction):\n",
+    "            account = Account(account_name, initial_balance)\n",
+    "            self.accounts[account_name] = account\n",
+    "            print(f\"Account '{account_name}' added.\")\n",
+    "            self.save_data()\n",
+    "            \n",
+    "    def check_account_exists(self, account_name):\n",
     "        if account_name in self.accounts:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "\n",
+    "    def add_transaction(self,account_name,date,description, amount, category=None):\n",
+    "        if account_name in self.accounts:\n",
+    "            transaction = Transaction(date,description,amount,category)\n",
     "            self.accounts[account_name].add_transaction(transaction)\n",
     "            print(f\"Transaction added to '{account_name}' account.\")\n",
+    "            self.save_data()\n",
     "        else:\n",
     "            print(f\"Account '{account_name}' does not exist. Please create account before adding transaction.\")\n",
     "\n",
-    "    def get_balance(self, account_name):\n",
+    "    def get_account_balance(self, account_name):\n",
     "        if account_name in self.accounts:\n",
-    "            return self.accounts[account_name].balance\n",
+    "            return self.accounts[account_name].get_balance()\n",
     "        else:\n",
     "            print(f\"Account '{account_name}' does not exist.\")\n",
     "            return None\n",
@@ -161,6 +178,7 @@
     "        print(\"Finance Summary of All accounts\")\n",
     "        print(\"-\" * 30)\n",
     "        total_balance = 0\n",
+    "        print(self.accounts)\n",
     "        for account in self.accounts.values():\n",
     "            balance = account.balance\n",
     "            total_balance += balance\n",
@@ -168,8 +186,257 @@
     "        print(f\"Total Balance across all accounts: {total_balance}\")\n",
     "        print(\"-\" * 30)\n",
     "        \n",
+    "    def save_data(self):\n",
+    "        \"\"\"Save all account and transaction data to a JSON file.\"\"\"\n",
+    "        data = {}\n",
+    "\n",
+    "        for account_name, account in self.accounts.items():\n",
+    "            data[account_name] = {\n",
+    "                'balance': account.balance,\n",
+    "                'transactions': [\n",
+    "                    {\n",
+    "                        'date': t.date,\n",
+    "                        'description': t.description,\n",
+    "                        'amount': t.amount,\n",
+    "                        'category': t.category\n",
+    "                    }\n",
+    "                    for t in account.transactions\n",
+    "                ]\n",
+    "            }\n",
+    "        \n",
+    "        # Save the data to the file\n",
+    "        with open(self.data_file, 'w') as f:\n",
+    "            json.dump(data, f, indent=4)      \n",
+    "\n",
+    "    def load_data(self):\n",
+    "            \"\"\"Load account and transaction data from a JSON file if it exists.\"\"\"\n",
+    "            try:\n",
+    "                with open(self.data_file, 'r') as f:\n",
+    "                    data = json.load(f)\n",
+    "                \n",
+    "                # Reconstruct the accounts and transactions from the JSON data\n",
+    "                for account_name, account_data in data.items():\n",
+    "                    account = Account(account_name, account_data['balance'])\n",
+    "                    for transaction_data in account_data['transactions']:\n",
+    "                        transaction = Transaction(\n",
+    "                            transaction_data['date'],\n",
+    "                            transaction_data['description'],\n",
+    "                            transaction_data['amount'],\n",
+    "                            transaction_data.get('category')\n",
+    "                        )\n",
+    "                        account.add_transaction(transaction)\n",
+    "                    self.accounts[account_name] = account\n",
+    "                print(f\"Loaded data from {self.data_file}\")\n",
+    "            except FileNotFoundError:\n",
+    "                print(f\"No data file found. Starting fresh.\")\n",
+    "            except json.JSONDecodeError:\n",
+    "                print(f\"Error loading JSON data. Starting fresh.\")\n",
     "            "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "5ed61d9d-b824-4af6-92fa-93b75ffd8132",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display_menu():\n",
+    "    print(\"\\n--- Finance Tracker Menu ---\")\n",
+    "    print(\"1. Add new account\")\n",
+    "    print(\"2. Add transaction\")\n",
+    "    print(\"3. View account balance\")\n",
+    "    print(\"4. Generate report for all accounts\")\n",
+    "    print(\"5. View category breakdown for an account\")\n",
+    "    print(\"6. Exit\")\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "a8ef2c6e-283f-46b2-8f7f-37f1dd1c77d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    tracker = FinanceTracker()\n",
+    "\n",
+    "    while True:\n",
+    "        display_menu()\n",
+    "        choice = input(\"Select an option (1-6): \")\n",
+    "\n",
+    "        if choice == \"1\":\n",
+    "            account_name = input(\"Enter account name: \")\n",
+    "            initial_balance = float(input(\"Enter initial balance: \"))\n",
+    "            tracker.add_account(account_name, initial_balance)\n",
+    "\n",
+    "        elif choice == \"2\":\n",
+    "            account_name = input(\"Enter account name: \")\n",
+    "            if tracker.check_account_exists(account_name):\n",
+    "                date = input(\"Enter transaction date (YYYY-MM-DD): \")\n",
+    "                description = input(\"Enter transaction description: \")\n",
+    "                amount = float(input(\"Enter transaction amount (positive for income, negative for expense): \"))\n",
+    "                category = input(\"Enter transaction category (optional): \")\n",
+    "                tracker.add_transaction(account_name, date, description, amount, category)\n",
+    "            else:\n",
+    "                print(f\"Account '{account_name}' does not exist. Please create the account first.\")\n",
+    "\n",
+    "\n",
+    "        elif choice == \"3\":\n",
+    "            account_name = input(\"Enter account name: \")\n",
+    "            balance = tracker.get_account_balance(account_name)\n",
+    "            if balance is not None:\n",
+    "                print(f\"Balance for {account_name}: {balance}\")\n",
+    "\n",
+    "        elif choice == \"4\":\n",
+    "            tracker.generate_report()\n",
+    "\n",
+    "        elif choice == \"5\":\n",
+    "            account_name = input(\"Enter account name: \")\n",
+    "            tracker.category_report(account_name)\n",
+    "\n",
+    "        elif choice == \"6\":\n",
+    "            print(\"Exiting the Finance Tracker. Goodbye!\")\n",
+    "            break\n",
+    "\n",
+    "        else:\n",
+    "            print(\"Invalid choice. Please try again.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "9094711a-20d2-40b9-88a6-f16b094e3136",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded data from finance_data.json\n",
+      "\n",
+      "--- Finance Tracker Menu ---\n",
+      "1. Add new account\n",
+      "2. Add transaction\n",
+      "3. View account balance\n",
+      "4. Generate report for all accounts\n",
+      "5. View category breakdown for an account\n",
+      "6. Exit\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Select an option (1-6):  2\n",
+      "Enter account name:  home\n",
+      "Enter transaction date (YYYY-MM-DD):  13123123\n",
+      "Enter transaction description:  fdf\n",
+      "Enter transaction amount (positive for income, negative for expense):  45\n",
+      "Enter transaction category (optional):  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transaction added to 'home' account.\n",
+      "{'home': <__main__.Account object at 0x10e6f7140>}\n",
+      "\n",
+      "--- Finance Tracker Menu ---\n",
+      "1. Add new account\n",
+      "2. Add transaction\n",
+      "3. View account balance\n",
+      "4. Generate report for all accounts\n",
+      "5. View category breakdown for an account\n",
+      "6. Exit\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[72], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Run the interactive program\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m----> 3\u001b[0m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[71], line 6\u001b[0m, in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m      5\u001b[0m     display_menu()\n\u001b[0;32m----> 6\u001b[0m     choice \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mSelect an option (1-6): \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m choice \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m      9\u001b[0m         account_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter account name: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/ipykernel/kernelbase.py:1282\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m   1280\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1281\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(msg)\n\u001b[0;32m-> 1282\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_input_request\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1283\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1284\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_parent_ident\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1285\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_parent\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshell\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1286\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpassword\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m   1287\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/ipykernel/kernelbase.py:1325\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m   1322\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[1;32m   1323\u001b[0m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[1;32m   1324\u001b[0m     msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInterrupted by user\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m-> 1325\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(msg) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1326\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[1;32m   1327\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlog\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInvalid Message:\u001b[39m\u001b[38;5;124m\"\u001b[39m, exc_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+     ]
+    }
+   ],
+   "source": [
+    "# Run the interactive program\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "985afea4-bc46-4c72-b547-1b72bd4e08d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "798350dc-65e9-4a7a-aa76-dd5d8ffc136e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tracker = FinanceTracker()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "31707db1-c273-4f36-86cb-5be86b3e0604",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Account 'test' added.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tracker.add_account(\"test\", 600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "2d20076b-aac5-4b9a-bb7e-6693992e6cf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "600"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tracker.get_balance(\"test\")"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "c848d09a-7fa0-4a14-bc21-b40df4934de2",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
