final changes made for submission

--- a/finance_manager.ipynb
+++ b/finance_manager.ipynb
@@ -20,12 +20,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49612797-a79a-4203-b54c-0f64062feafd",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "438b5a3a-a57e-46ec-a68d-695b302866f8",
    "metadata": {},
    "source": [
@@ -34,13 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 158,
    "id": "8a6823e5-a582-4819-b687-aa3839114678",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import json"
    ]
   },
@@ -55,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 159,
    "id": "42181214-8cb1-4b8e-b7f0-c4b008075e1d",
    "metadata": {},
    "outputs": [],
@@ -94,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 160,
    "id": "7d996389-a80e-48b8-b2ad-832b2887449e",
    "metadata": {},
    "outputs": [],
@@ -131,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 161,
    "id": "d6726bbd-a13d-4647-a9b6-a7ed3e67c910",
    "metadata": {},
    "outputs": [],
@@ -144,7 +136,7 @@
     "\n",
     "    def add_account(self, account_name, initial_balance=0):\n",
     "        if account_name in self.accounts:\n",
-    "            print(f\"Account '{account.name}' already exists\")\n",
+    "            print(f\"Account '{account_name}' already exists\")\n",
     "        else:\n",
     "            account = Account(account_name, initial_balance)\n",
     "            self.accounts[account_name] = account\n",
@@ -184,16 +176,36 @@
     "            return None\n",
     "\n",
     "    def generate_report(self):\n",
-    "        print(\"Finance Summary of All accounts\")\n",
-    "        print(\"-\" * 30)\n",
-    "        total_balance = 0\n",
-    "        print(self.accounts)\n",
-    "        for account in self.accounts.values():\n",
-    "            balance = account.balance\n",
-    "            total_balance += balance\n",
-    "            print(f\"Account: {account.name} | Balance: {balance}\")\n",
-    "        print(f\"Total Balance across all accounts: {total_balance}\")\n",
-    "        print(\"-\" * 30)\n",
+    "        \"\"\"Generate a detailed report of all accounts with balances and transaction details.\"\"\"\n",
+    "        if not self.accounts:\n",
+    "            print(\"No accounts available.\")\n",
+    "            return\n",
+    "    \n",
+    "        print(\"Account Report\".center(50, \"=\"))\n",
+    "        \n",
+    "        for account_name, account in self.accounts.items():\n",
+    "            print(f\"\\nAccount: {account_name}\")\n",
+    "            print(f\"Balance: {account.get_balance():.2f}\")\n",
+    "            print(f\"Number of Transactions: {len(account.transactions)}\")\n",
+    "            \n",
+    "            # Summarize income and expenses\n",
+    "            total_income = sum(t.amount for t in account.transactions if t.amount > 0)\n",
+    "            total_expense = sum(t.amount for t in account.transactions if t.amount < 0)\n",
+    "            \n",
+    "            print(f\"Total Income: {total_income:.2f}\")\n",
+    "            print(f\"Total Expense: {total_expense:.2f}\")\n",
+    "            \n",
+    "            # Display each transaction's details\n",
+    "            print(\"\\nTransactions:\")\n",
+    "            print(f\"{'Date':<12} {'Description':<20} {'Amount':<10} {'Category':<15}\")\n",
+    "            print(\"-\" * 50)\n",
+    "            \n",
+    "            for transaction in account.transactions:\n",
+    "                print(f\"{transaction.date:<12} {transaction.description:<20} {transaction.amount:<10.2f} {transaction.category or 'N/A':<15}\")\n",
+    "            \n",
+    "            print(\"-\" * 50)\n",
+    "    \n",
+    "        print(\"End of Report\".center(50, \"=\"))\n",
     "        \n",
     "    def save_data(self):\n",
     "        \"\"\"Save all account and transaction data to a JSON file.\"\"\"\n",
@@ -245,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 151,
    "id": "5ed61d9d-b824-4af6-92fa-93b75ffd8132",
    "metadata": {},
    "outputs": [],
@@ -254,18 +266,16 @@
     "    print(\"\\n--- Finance Tracker Menu ---\")\n",
     "    print(\"1. Add new account\")\n",
     "    print(\"2. Add transaction\")\n",
-    "    print(\"3. View account balance\")\n",
-    "    print(\"4. Generate report for all accounts\")\n",
-    "    print(\"5. View category breakdown for an account\")\n",
-    "    print(\"6. Show All accounts\")\n",
-    "    print(\"7. Exit\")\n",
+    "    print(\"3. Generate report for all accounts\")\n",
+    "    print(\"4. Show All accounts\")\n",
+    "    print(\"5. Exit\")\n",
     "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 157,
    "id": "a8ef2c6e-283f-46b2-8f7f-37f1dd1c77d9",
    "metadata": {},
    "outputs": [],
@@ -275,7 +285,7 @@
     "\n",
     "    while True:\n",
     "        display_menu()\n",
-    "        choice = input(\"Select an option (1-6): \")\n",
+    "        choice = input(\"Select an option (1-5): \")\n",
     "\n",
     "        if choice == \"1\":\n",
     "            account_name = input(\"Enter account name: \")\n",
@@ -295,22 +305,13 @@
     "\n",
     "\n",
     "        elif choice == \"3\":\n",
-    "            account_name = input(\"Enter account name: \")\n",
-    "            balance = tracker.get_account_balance(account_name)\n",
-    "            if balance is not None:\n",
-    "                print(f\"Balance for {account_name}: {balance}\")\n",
-    "\n",
-    "        elif choice == \"4\":\n",
     "            tracker.generate_report()\n",
     "\n",
-    "        elif choice == \"5\":\n",
-    "            account_name = input(\"Enter account name: \")\n",
-    "            tracker.category_report(account_name)\n",
     "\n",
-    "        elif choice == \"6\":\n",
+    "        elif choice == \"4\":\n",
     "            tracker.show_all_accounts()\n",
     "\n",
-    "        elif choice == \"7\":\n",
+    "        elif choice == \"5\":\n",
     "            print(\"Exiting the Finance Tracker. Goodbye!\")\n",
     "            break\n",
     "\n",
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "id": "9094711a-20d2-40b9-88a6-f16b094e3136",
    "metadata": {},
    "outputs": [
@@ -333,11 +334,163 @@
       "--- Finance Tracker Menu ---\n",
       "1. Add new account\n",
       "2. Add transaction\n",
-      "3. View account balance\n",
-      "4. Generate report for all accounts\n",
-      "5. View category breakdown for an account\n",
-      "6. Show All accounts\n",
-      "7. Exit\n"
+      "3. Generate report for all accounts\n",
+      "4. Show All accounts\n",
+      "5. Exit\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Select an option (1-6):  3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==================Account Report==================\n",
+      "\n",
+      "Account: test\n",
+      "Balance: 4730.00\n",
+      "Number of Transactions: 2\n",
+      "Total Income: 0.00\n",
+      "Total Expense: -110.00\n",
+      "\n",
+      "Transactions:\n",
+      "Date         Description          Amount     Category       \n",
+      "--------------------------------------------------\n",
+      "2024-08-14   grocery              -50.00     food           \n",
+      "2024-08-09   Clothes              -60.00     N/A            \n",
+      "--------------------------------------------------\n",
+      "==================End of Report===================\n",
+      "\n",
+      "--- Finance Tracker Menu ---\n",
+      "1. Add new account\n",
+      "2. Add transaction\n",
+      "3. Generate report for all accounts\n",
+      "4. Show All accounts\n",
+      "5. Exit\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Select an option (1-6):  1\n",
+      "Enter account name:  test\n",
+      "Enter initial balance:  500\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Account 'test' already exists\n",
+      "\n",
+      "--- Finance Tracker Menu ---\n",
+      "1. Add new account\n",
+      "2. Add transaction\n",
+      "3. Generate report for all accounts\n",
+      "4. Show All accounts\n",
+      "5. Exit\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Select an option (1-6):  1\n",
+      "Enter account name:  test_1\n",
+      "Enter initial balance:  5000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Account 'test_1' added.\n",
+      "\n",
+      "--- Finance Tracker Menu ---\n",
+      "1. Add new account\n",
+      "2. Add transaction\n",
+      "3. Generate report for all accounts\n",
+      "4. Show All accounts\n",
+      "5. Exit\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Select an option (1-6):  2\n",
+      "Enter account name:  test_1\n",
+      "Enter transaction date (YYYY-MM-DD):  2024-10-11\n",
+      "Enter transaction description:  salary\n",
+      "Enter transaction amount (positive for income, negative for expense):  2000\n",
+      "Enter transaction category (optional):  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transaction added to 'test_1' account.\n",
+      "\n",
+      "--- Finance Tracker Menu ---\n",
+      "1. Add new account\n",
+      "2. Add transaction\n",
+      "3. Generate report for all accounts\n",
+      "4. Show All accounts\n",
+      "5. Exit\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Select an option (1-6):  3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==================Account Report==================\n",
+      "\n",
+      "Account: test\n",
+      "Balance: 4730.00\n",
+      "Number of Transactions: 2\n",
+      "Total Income: 0.00\n",
+      "Total Expense: -110.00\n",
+      "\n",
+      "Transactions:\n",
+      "Date         Description          Amount     Category       \n",
+      "--------------------------------------------------\n",
+      "2024-08-14   grocery              -50.00     food           \n",
+      "2024-08-09   Clothes              -60.00     N/A            \n",
+      "--------------------------------------------------\n",
+      "\n",
+      "Account: test_1\n",
+      "Balance: 7000.00\n",
+      "Number of Transactions: 1\n",
+      "Total Income: 2000.00\n",
+      "Total Expense: 0.00\n",
+      "\n",
+      "Transactions:\n",
+      "Date         Description          Amount     Category       \n",
+      "--------------------------------------------------\n",
+      "2024-10-11   salary               2000.00    N/A            \n",
+      "--------------------------------------------------\n",
+      "==================End of Report===================\n",
+      "\n",
+      "--- Finance Tracker Menu ---\n",
+      "1. Add new account\n",
+      "2. Add transaction\n",
+      "3. Generate report for all accounts\n",
+      "4. Show All accounts\n",
+      "5. Exit\n"
      ]
     },
     {
@@ -351,17 +504,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Account: home, Balance: 785.0\n",
-      "Account: office, Balance: 5000.0\n",
+      "Invalid choice. Please try again.\n",
       "\n",
       "--- Finance Tracker Menu ---\n",
       "1. Add new account\n",
       "2. Add transaction\n",
-      "3. View account balance\n",
-      "4. Generate report for all accounts\n",
-      "5. View category breakdown for an account\n",
-      "6. Show All accounts\n",
-      "7. Exit\n"
+      "3. Generate report for all accounts\n",
+      "4. Show All accounts\n",
+      "5. Exit\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Select an option (1-6):  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exiting the Finance Tracker. Goodbye!\n"
      ]
     }
    ],
@@ -372,60 +536,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "985afea4-bc46-4c72-b547-1b72bd4e08d8",
+   "cell_type": "markdown",
+   "id": "527e2598-a45c-4c13-8249-aae897115c8c",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "798350dc-65e9-4a7a-aa76-dd5d8ffc136e",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "tracker = FinanceTracker()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "31707db1-c273-4f36-86cb-5be86b3e0604",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Account 'test' added.\n"
-     ]
-    }
-   ],
-   "source": [
-    "tracker.add_account(\"test\", 600)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "2d20076b-aac5-4b9a-bb7e-6693992e6cf3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "600"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tracker.get_balance(\"test\")"
+    "### Possible Development\n",
+    "- Create a plot to demonstrate income v expense on monthly basis\n",
+    "- Data validation (for e.g. dates, money)\n",
+    "- Save the data to a database (more reliable format)\n",
+    "  "
    ]
   },
   {
